Thesis done for final review wtih balkcom

--- a/doc/refs.bib
+++ b/doc/refs.bib
@@ -7,7 +7,7 @@
   url       = "http://algorithmicbotany.org/papers/#abop"
 }
 
-@inproceedings{Ong:2005:TGU:1068009.1068241,
+@inproceedings{ong05,
  author = {Ong, Teong Joo and Saunders, Ryan and Keyser, John and Leggett, John J.},
  title = {Terrain Generation Using Genetic Algorithms},
  booktitle = {Proceedings of the 7th Annual Conference on Genetic and Evolutionary Computation},
@@ -74,7 +74,7 @@ URL = {http://epubs.siam.org/doi/abs/10.1137/1010093},
 eprint = {http://epubs.siam.org/doi/pdf/10.1137/1010093}
 }
 
-@article{Fournier:1982,
+@article{fournier82,
  author = {Fournier, Alain and Fussell, Don and Carpenter, Loren},
  title = {Computer Rendering of Stochastic Models},
  journal = {Commun. ACM},
@@ -259,3 +259,27 @@ language={English}
 
 } 
 
+@ARTICLE {moorcroft01,
+    author  = "Moorcroft, P.R. and Hurtt, G.C. and Stephen W. Pacala",
+    title   = "A method for scaling vegetation dynamics: the ecosystem demography model (ED)",
+    journal = "Ecological Monographs",
+    year    = "2001",
+    volume  = "71",
+    number  = "4",
+    pages   = "557-586",
+    month   = "nov"
+}
+
+@article{honda71,
+title = "Description of the form of trees by the parameters of the tree-like body: Effects of the branching angle and the branch length on the shape of the tree-like body ",
+journal = "Journal of Theoretical Biology ",
+volume = "31",
+number = "2",
+pages = "331 - 338",
+year = "1971",
+note = "",
+issn = "0022-5193",
+doi = "http://dx.doi.org/10.1016/0022-5193(71)90191-3",
+url = "http://www.sciencedirect.com/science/article/pii/0022519371901913",
+author = "Hisao Honda"
+}
